# reviewly

./: .gitignore  README.md  SHIPPING.md  biome.json  components.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: creds.rs  error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/auth/: device.rs
src-tauri/src/clients/: github.rs  graphql.rs  mod.rs
src-tauri/src/commands/: actions.rs  ai.rs  app.rs  attachments.rs  auth.rs  comments.rs  git.rs  mod.rs  notifications.rs  pulls.rs  reviews.rs  search.rs
src-tauri/src/workers/: github_poll.rs  mod.rs
src/app/: command-palette.tsx  layout.tsx  pinboard-bar.tsx  sidebar.tsx  title-bar.tsx  use-app-behavior-sync.ts  use-auth-bootstrap.ts  use-clipboard-sniff.ts  use-dependabot-events.ts  use-global-shortcuts.ts  use-guided-events.ts  use-native-chrome.ts  use-notif-sync.ts  use-pr-sync.ts  use-realtime-events.ts  use-tray-nav.ts  use-updater.ts
src/components/: about-dialog.tsx  ai-review.tsx  card.tsx  changes-panel.tsx  check-badge.tsx  collapsible-section.tsx  comment-byline.tsx  composer.tsx  contribution-heatmap.tsx  diff-find-bar.tsx  diff-viewer.tsx  empty-state.tsx  error-boundary.tsx  file-tree.tsx  gh-attachment.tsx  guided-review.tsx  icon-button.tsx  kbd.tsx  kite-loader.tsx  label-chip.tsx  label-picker.tsx  markdown-body.tsx  page-header.tsx  patch-view.tsx  popover.tsx  pr-actions.tsx  pr-row.tsx  reactions-bar.tsx  repo-quick-open.tsx  review-submit-dialog.tsx  review-thread.tsx  reviewer-picker.tsx  reviewly-glyph.tsx  section-header.tsx  segmented.tsx  settings-dialog.tsx  shortcuts-cheatsheet.tsx  skeleton-list.tsx  stack-rail.tsx  tooltip-for.tsx  (+2 more)
src/lib/: ai-actions.ts  caret.ts  codeowners.ts  confetti.ts  diff.ts  emoji.ts  file-icons.tsx  focus.ts  format.ts  guided.ts  kite-release.ts  lang.ts  prs-db.ts  router.tsx  sql-storage.ts  stack.ts  status.ts  sync.ts  (+2 more)
(+54 files in other folders)
