[package]
name = "reviewly"
version = "0.1.3"
description = "Desktop pull-request review console for GitHub"
authors = ["volnei"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "reviewly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "io-util"] }
# native-tls so HTTPS verifies against the OS trust store (macOS Keychain,
# Windows cert store, system CA bundle) — not just rustls's bundled Mozilla
# roots. This makes Reviewly work behind corporate TLS-inspection proxies
# (Netskope, Zscaler, …) whose root CA lives in the system store, just like gh.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
url = "2"
dashmap = "6"
futures = "0.3"
tauri-plugin-os = "2"
window-vibrancy = "0.6"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-window-state = "2"
base64 = "0.22"
urlencoding = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
